- added eslint for the server - added Swagger UI - moved model creation into a models folder - made the router work for Swagger - TODO: Add proper DI for the repository since its hard linked into the router
