# server/todos/models/todo.js
@@ -1,0 +1,7 @@
+export const createTodo = (id = "", completed = false, description = "") => {
+    return {
+        id,
+        completed,
+        description
+    };
+};
