# server/todos/repository.js
@@ -1,22 +1,15 @@
 import uuid from "node-uuid";
+import { createTodo } from "./models/todo";
 
-//this is a subbed out database
-const database = [{
-    id: uuid.v4(),
-    completed: true,
-    description: "start a Todo React App"
-}];
-
-const createTodo = ({completed = false, description = ""}) => {
-    return Object.assign({ id: uuid.v4() }, { completed, description });
-};
+// this is a subbed out database
+const database = [createTodo(uuid.v4(), true, "start a Todo React App")];
 
 const Repository = {};
 
 Repository.getAllTodos = () => database;
 
-Repository.addTodo = ({completed = false, description = ""}) => {
-    const todo = createTodo(completed, description);
+Repository.addTodo = ({ completed = false, description = "" }) => {
+    const todo = createTodo(uuid.v4(), completed, description);
     database.push(todo);
     return todo;
 };
@@ -25,13 +18,12 @@ Repository.update = (id, newTodo) => {
     const point = database.findIndex(todo => todo.id === id);
     console.log(point);
 
-    if(point !== -1 ){
+    if (point !== -1) {
         database[point] = newTodo;
         return true;
-    } else {
-        return false;
     }
 
+    return false;
 };
 
 export default Repository;
